--- a/assets/css/variables/_colors.scss
+++ b/assets/css/variables/_colors.scss
@@ -35,8 +35,8 @@ $hint-colors: (
   --lineno-font-color: rgba(0, 0, 0, 0.5);
 
   --data-thead-color: #d1d5db;
-  --data-tbody-odd: rgba(255, 255, 255, 0.3);
-  --data-tbody-even: rgba(248, 249, 250, 0.5);
+  --data-tbody-odd: rgba(248, 249, 250, 0.5);
+  --data-tbody-even: rgba(0, 0, 0, 0.1);
   --data-tbody-hover: rgba(233, 236, 239, 0.8);
 }
 
